Modernize SetCommunityHandler
The two entrypoints here end up doing the same thing, so let's share
more of the commonalities.

Also use switch expressions to dispatch the individual possibilities.

Change-Id: I1b83b81800f3d08721c3f6eaa69ea1507180d92d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>